fix .table-responsive scrollbar always showing

--- a/src/modules/_tables.scss
+++ b/src/modules/_tables.scss
@@ -81,7 +81,7 @@
 
 .table-responsive {
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     table {
         th,
